Bug 69384 - Copy paste from impress to writer broken
Summary: Copy paste from impress to writer broken
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.5.1 rc
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.2.0 target:4.1.3 target:4.0.6
Keywords:
: 70760 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-09-15 15:38 UTC by ysn
Modified: 2014-06-02 21:02 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ysn 2013-09-15 15:38:50 UTC
When we copy paste any words from Impress to Writer, we got only a blank line.
How to reproduce:
1. Open Impress
2. Type some words in impress (I type "grrr" in body section)
3. Copy the words you just typed to clipboard (ctrl + c)
4. Open WRITER
5. Paste

Expected result:
The words are copied correctly with its styles

Actual Result :
A blank line

Product effected with this bug:
All LibreOffice from 4.0.x to 4.1.x line
Comment 1 Joel Madero 2013-09-15 15:53:18 UTC
Ysn - please don't add a ton of people cc'ed on your bug reports, it's a good way to just tick off people. Especially when you just reported the bug 13 minutes ago - let QA have a chance to get to the bug before specifically bugging people about it.

Lastly if you are going to CC people please explain clearly why you chose those people in a comment
Comment 2 Cor Nouws 2013-09-15 16:41:09 UTC
Hi ysn,

thanks for the report. I confirm this. 
Still I seldom will have this as a problem, since I always do a paste special > Text only ;) (recommanded anyway)

Also I notice that copying a frame and pasting to Writer works as expected

regards,
Cor
Comment 3 Cor Nouws 2013-09-15 16:51:48 UTC
The first version I see this bug in is 4.0.5.2
But I don't have the 4.0.5.1 installed - I expect it's in there too, so set that one as version (oldest known version with the problem!)

Set the component to LibreOffice - I think the clipboard is separate from Impress. But I might be wrong in this ..
Comment 4 Cor Nouws 2013-09-15 18:06:26 UTC
ah, thanks for linking too 62044 ;)
Comment 5 ysn 2013-09-17 16:36:56 UTC
@Joel
My apologize if this bugging you, I included a few people here because I felt the bug is related to 62044. :(

I don't have any information about the QA Procedure at LibreOffice. I am a bit surprise to know that I am breaking the compliance because not waiting for the QA team to catch up first. I open this ticket is just from the perspective of end user which found a bug and willing to report it (because I already testing for 2 release and it's not get fixed). Would you please inform me about the proper procedure to report a bug. Next time I guarantee 100% compliance with QA procedure on submitting bug.

@Cor
My sincere thanks for telling me a workaround, I told my colleague to use paste special -> text only and it's really helpful :)
Comment 6 Joel Madero 2013-09-17 16:46:06 UTC
No worries! Just if everyone reported a bug and cc'ed a lot of people....well I'd probably be cc'ed on 1,000 bugs a month. 

Unless it's a horrible bug (usually crasher) cc'ing people just overloads our boxes (I get about 100 emails a day related to LibreOffice as is) and makes it impossible to keep up with it. Usually you report and you just wait...the goal is we'll independently triage the bug within a month or two and then QA will take additional steps if necessary to get others involved. This is to avoid people pushing their own bugs above the priority which they "deserve" - sometimes it's hard to explain this but there are levels of bugs and some really do deserve immediate attention while others do not. See flowchart linked for our workflow :)

https://wiki.documentfoundation.org/QA/BugTriage
https://wiki.documentfoundation.org/images/0/06/Prioritizing_Bugs_Flowchart.jpg

There are details of the steps. If you have some time to help QA, we're incredibly overloaded and would appreciate any help you can provide :)


All the Best,
Joel
Comment 7 Michael Stahl 2013-10-04 08:33:19 UTC
clearly should be fixed for 4.0.6.2 ...

regression on libreoffice-4-0 branch from:

commit eedf31c5a548d88acbc42daf3fdd647c7aee859e
Author: Miklos Vajna <vmiklos@suse.cz>
Date:   Tue Jun 4 12:21:11 2013 +0200

    fdo#62044 RTF import: don't overwrite existing styles when pasting
Comment 8 Miklos Vajna 2013-10-04 08:47:13 UTC
Regression caused by me, assign.
Comment 9 Commit Notification 2013-10-04 10:26:24 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5ebe826caf75e8d00656b3333385bf0bbc05cb27

fdo#69384 fix impress -> writer copy&paste



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Miklos Vajna 2013-10-04 12:18:35 UTC
-4-1 review: https://gerrit.libreoffice.org/6126
-4-0 review: https://gerrit.libreoffice.org/6129
Comment 11 Commit Notification 2013-10-04 14:25:24 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a3fa048790b6e0928be3ff8bcd102813e0bcedb3&h=libreoffice-4-1

fdo#69384 fix impress -> writer copy&paste


It will be available in LibreOffice 4.1.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2013-10-04 14:25:43 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=68fc31104299588f92cac3169a01ec926826f95a&h=libreoffice-4-0

fdo#69384 fix impress -> writer copy&paste


It will be available in LibreOffice 4.0.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2013-10-09 13:37:35 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-0-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=168b5a95bd0a030e4c781f7d00bec47eb706ec09&h=libreoffice-4-0-6

fdo#69384 fix impress -> writer copy&paste


It will be available already in LibreOffice 4.0.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Michael Stahl 2013-12-05 19:50:07 UTC
*** Bug 70760 has been marked as a duplicate of this bug. ***
Comment 15 Zeki Bildirici 2014-06-02 20:45:52 UTC
Hi,

I can reproduce this bug on Version: 4.2.4.2  Build NO: 420m0(Build:2) on Ubuntu.

Best regards,
Zeki
Comment 16 Michael Stahl 2014-06-02 21:02:10 UTC
no you can't - you can perhaps reproduce a different bug that has the same symptoms - please file a *new* bug and don't reopen FIXED ones.